# co2-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: device.rs  lib.rs  pc.rs
visualize/: README.md  main.py  pyproject.toml
