[package]
name = "co2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "co2_cli"
path = "src/bin/cli_logger.rs"
required-features = ["pc"]

[dependencies]
heapless = { version = "0.9.2", features = ["defmt"] }
hidapi = { version = "2.6.3", optional = true }
csv = { version = "1.4.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
# hex = { version = "0.4.3", default-features = false }

[features]
pc = ["dep:hidapi", "dep:csv", "dep:serde", "dep:chrono"]
